# correct-keyword

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/models/: search_result.py  search_word.py  tweet.py
src/twitter/: __init__.py  search.py
