[tool.poetry]
name = "correct-keyword"
version = "0.1.0"
description = ""
authors = ["doara-developer <doaradev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Janome = "^0.4.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
bandit = "^1.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8-quotes = "^3.2.0"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
